<resources>

    <string name="app_name">動畫大學</string>
    
    <!--Activity: MainViewpager ..TypeName -->
    <string name="type_usa">"美劇"</string>
 	<string name="type_hk">"港劇"</string>
 	
 	<!--Activity: MyFavorite -->
	<string name="myfavorite_title"> "我的收藏"</string>
	<string name="no_like">"尚未有任何收藏"</string>
	 
	<!--Activity: Search -->
	<string name="search_text"> "搜尋"</string>
	<string name="search_title"> "搜尋"</string>
	

	<!-- promote -->
	<string name="title">Title</string>
    <string name="description">Description</string>
    <string name="go">Go</string>
    

	<!-- admob mediation -->
	<string name="admob_key">de018f6459ac4f4f</string>
	
	<!-- Chapter Activity -->
	<string name="story">劇情簡介</string>
	<string name="report">問題回報</string>
	<string name="favorite">加入收藏</string>
	<string name="countinue">繼續觀看</string>
</resources>
