<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:text="@string/title"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_promote_divider_height"
        android:background="@color/main_color_green"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_promote_margin"
        android:layout_gravity="center"
        android:background="@color/background" 
        android:contentDescription="@null"       
        android:scaleType="fitCenter" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_promote_textsize"
        android:text="@string/description"
        />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_promote_divider_height"
        android:background="@color/main_color_green"
        />
    <LinearLayout
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:orientation="horizontal" 
	   android:background="@color/background"
	   >
	   <Button 
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/dialog_promote_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_promote_textsize"
            android:text="@string/go"/>
    </LinearLayout>
    </LinearLayout>